--- a/package.json
+++ b/package.json
@@ -5,11 +5,17 @@
   "types": "index.d.ts",
   "license": "MIT",
   "repository": "arefaslani/next-images",
+  "scripts": {
+    "test": "jest"
+  },
   "dependencies": {
     "file-loader": "^6.0.0",
     "url-loader": "^4.0.0"
   },
   "peerDependencies": {
     "webpack": "^4.0.0 || ^5.0.0"
+  },
+  "devDependencies": {
+    "jest": "^26.6.1"
   }
 }
